# comfyui_noisegen

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PHASE_2_ROADMAP.md  README.md  ROADMAP.md  __init__.py  audio_utils.py  comprehensive_test_suite.py  debug_audio_preview.py  debug_parameters.py  design.md  install.bat  install.py  minimal_test.json  noise_nodes.py  package.json  pyproject.toml  quick_test_all.py  requirements.txt  test_4_input_mixer.py  test_all_nodes.py  test_granular_phase2.py  test_nodes.py  test_nodes_comprehensive.py
docs/: README.md  index.html
docs/css/: base.css  style.css  themes.css
docs/images/: CSS_TEMPLATE.md  IMAGE_CHECKLIST.md
docs/nodes/: audio-analyzer.html  audio-save.html  bandlimited-noise.html  chaos-noise-mix.html  convolution-reverb.html  feedback-processor.html  granular-processor.html  granular-sequencer.html  (+5 more)
examples/: 01_basic_noise_types.json  02_merzbow_harsh_noise_wall.json  03_evolving_ambient_drone.json  04_glitchy_breakcore_textures.json  05_external_audio_processing.json  06_granular_synthesis_showcase.json  audio_compatibility_test.json  audio_preview_workflow.json  audio_test_suite.json  basic_white_noise.json  chaos_mix_test.json  feedback_processor_test.json  granular_synthesis_showcase.json  harsh_filter_showcase.json  japanese_noise_merzbow.json  japanese_noise_merzbow_v2_ultimate.json  minimal_test.json  multi_distortion_showcase.json  simple_test_workflow.json  spectral_processor_showcase.json  stereo_ambient_soundscape.json  vhs_audio_processing_workflow.json
web/: index.html  noise_guide.html
(+42 files in other folders)
