[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-noisegen"
dynamic = ["version"]
description = "Professional noise generation nodes for ComfyUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "eg0pr0xy", email = ""},
]
keywords = ["comfyui", "audio", "noise", "generation", "sound"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/eg0pr0xy/noisegen"
Repository = "https://github.com/eg0pr0xy/noisegen.git"
Issues = "https://github.com/eg0pr0xy/noisegen/issues"

[tool.setuptools]
packages = ["noisegen"]

[tool.setuptools.dynamic]
version = {attr = "noisegen.__version__"}

[tool.setuptools.package-data]
noisegen = ["examples/*.json"] 